@@ -19,6 +19,8 @@ function F(x) = (
 LinePlotWindow=[-pi*1.1,pi*1.1,-3,3];
 LinePlotDrawLegends=false;
 
+PlotWindowPresent(); # Make sure the window is raised
+
 # For faster animation, precompute,
 print("Precomputing Fourier Series...");
 hvals = [0.0:0.1:2.0,2.0:-0.1:0.0];
