@@ -17,6 +17,7 @@ LinePlotWindow=[-2,2,-0.5,1.5];
 LinePlotDrawLegends=false;
 
 LinePlotClear();
+PlotWindowPresent(); # Make sure the window is raised
 
 # Draw the graph by hand to correctly draw the gap
 LinePlotDrawLine([-2,0;-1,1],"thickness",2,"color","darkblue");
