@@ -36,6 +36,7 @@ tend = 1.5;
 LinePlotWindow = [xstart,xend,-0.1,tend+0.1];
 LinePlotDrawLegends = false;
 LinePlotClear();
+PlotWindowPresent(); # Make sure the window is raised
 
 # color in [red,green,blue]
 # Color according to phi
