@@ -5,6 +5,7 @@ function dist(p1,p2) = sqrt((p1@(1)-p2@(1))^2+(p1@(2)-p2@(2))^2);
 
 p = [0,0;1,0;0.5,sqrt(3)/2];
 LinePlotClear();
+PlotWindowPresent(); # Make sure the window is raised
 
 x=[0.5,0.5];
 LinePlotWindow = [-0.1,1.1,-0.1,sqrt(3)/2+0.1];
