@@ -3,6 +3,8 @@
 
 the_answer = AskButtons("Number of dimensions?", "2D", "3D");
 
+PlotWindowPresent(); # Make sure the window is raised
+
 if the_answer == 1 then (
     LinePlotDrawLegends = false;
 
