@@ -26,6 +26,8 @@ ptnum = 5000;
 x = [0.0,0.0];
 
 LinePlotDrawLegends = false;
+PlotWindowPresent(); # Make sure the window is raised
+
 
 points = null;
 
