@@ -75,7 +75,7 @@ Kai Willadsen
    To report a bug or make a suggestion regarding the Genius
    Mathematics Tool application or this manual, please visit the
    Genius Web page or email me at <jirka@5z.com>.
-   This manual describes version 1.0.18 of Genius.
+   This manual describes version 1.0.19 of Genius.
      __________________________________________________________
 
    Table of Contents
@@ -361,7 +361,7 @@ genius> load path/to/program.gel
 
    Genius Mathematics Tool keeps track of the current directory.
    To list files in the current directory type ls, to change
-   directory do cd directory as in the unix command shell.
+   directory do cd directory as in the UNIX command shell.
      __________________________________________________________
 
 To Create a New Program
@@ -705,7 +705,7 @@ Null
    performed on it, and nothing is printed when it is returned.
    Therefore, null is useful when you do not want output from an
    expression. The value null can be obtained as an expression
-   when you type ., the contant null or nothing. By nothing we
+   when you type ., the constant null or nothing. By nothing we
    mean that if you end an expression with a separator ;, it is
    equivalent to ending it with a separator followed by a null.
 
@@ -981,7 +981,7 @@ Modular Evaluation
    simply gives the remainder, but that may be time consuming if
    not impossible when working with larger numbers. For example,
    10^(10^10) % 6 will simply not work (the exponent will be too
-   large), while 10^(10^10) mod 6 is instanteneous. The first
+   large), while 10^(10^10) mod 6 is instantaneous. The first
    expression first tries to compute the integer 10^(10^10) and
    then find remainder after division by 6, while the second
    expression evaluates everything modulo 6 to begin with.
@@ -1089,7 +1089,7 @@ List of GEL Operators
 
    a./b
           Element by element division. Same as a/b for numbers,
-          but operarates element by element on matrices.
+          but operates element by element on matrices.
 
    a\b
           Back division. That is this is the same as b/a.
@@ -1179,7 +1179,7 @@ List of GEL Operators
 
    -a
           Negation operator. Returns the negative of a number or a
-          matrix (works elementwise on a matrix).
+          matrix (works element-wise on a matrix).
 
    &a
           Variable referencing (to pass a reference to a
@@ -1253,7 +1253,7 @@ genius> 1:2:9
           done only from version 1.0.18 onwards, so execution of
           your code may differ on older versions. If you want to
           avoid dealing with this issue, use actual rational
-          numbers, possibly useing the float if you wish to get
+          numbers, possibly using the float if you wish to get
           floating point numbers in the end. For example 1:2/5:3
           does the right thing and float(1:2/5:3) even gives you
           floating point numbers and is ever so slightly more
@@ -1537,7 +1537,7 @@ function f() = (a:=5);
 f();
 
    Sometimes, however, it is necessary to set a global variable
-   from inside a function. When this behaviour is needed, use the
+   from inside a function. When this behavior is needed, use the
    set function. Passing a string or a quoted identifier to this
    function sets the variable globally (on the top level). For
    example, to set a to the value 3 you could call:
@@ -1584,8 +1584,7 @@ parameter foo = 1
    When you undefine a parameter using the undefine function, it
    stops being a parameter.
 
-   Some parameters are built-in and modify the behaviour of
-   genius.
+   Some parameters are built-in and modify the behavior of genius.
      __________________________________________________________
 
 Returning
@@ -1669,7 +1668,7 @@ a:=4
 a@(1,1) := 5
 a@(4:8,3) := [1,2,3,4,5]'
 
-   Note that both := and = can be used interchangably. Except if
+   Note that both := and = can be used interchangeably. Except if
    the assignment appears in a condition. It is thus always safer
    to just use := when you mean assignment, and == when you mean
    comparison.
@@ -1698,8 +1697,8 @@ function f(M) = (
 
 Toplevel Syntax
 
-   The synatax is slightly different if you enter statements on
-   the top level versus when they are inside parentheses or inside
+   The syntax is slightly different if you enter statements on the
+   top level versus when they are inside parentheses or inside
    functions. On the top level, enter acts the same as if you
    press return on the command line. Therefore think of programs
    as just sequence of lines as if were entered on the command
@@ -1857,11 +1856,11 @@ function f(g,x) = (
 );
 
    Then the code will work as expected and prints out 11. Note
-   that the local statement initializes all the refereced
+   that the local statement initializes all the referenced
    variables (except for function arguments) to a null.
 
    If all variables are to be created as locals you can just pass
-   an asterix instead of a list of variables. In this case the
+   an asterisk instead of a list of variables. In this case the
    variables will not be initialized until they are actually set
    of course. So the following definition of f will also work:
 function f(g,x) = (
@@ -1898,7 +1897,7 @@ Loading Programs
    This has to be done on the top level and not inside any
    function or whatnot, and it cannot be part of any expression.
    It also has a slightly different syntax than the rest of
-   genius, more similiar to a shell. You can enter the file in
+   genius, more similar to a shell. You can enter the file in
    quotes. If you use the '' quotes, you will get exactly the
    string that you typed, if you use the "" quotes, special
    characters will be unescaped as they are for strings. Example:
@@ -1907,7 +1906,7 @@ load "Weird File Name With SPACES.gel"
 
    There are also cd, pwd and ls commands built in. cd will take
    one argument, ls will take an argument that is like the glob in
-   the unix shell (i.e., you can use wildcards). pwd takes no
+   the UNIX shell (i.e., you can use wildcards). pwd takes no
    arguments. For example:
 cd directory_with_gel_programs
 ls *.gel
@@ -1915,14 +1914,14 @@ ls *.gel
 
 Matrices in GEL
 
-   Genius has support for vectors and matrices and posesses a
+   Genius has support for vectors and matrices and possesses a
    sizable library of matrix manipulation and linear algebra
    functions.
      __________________________________________________________
 
 Entering Matrices
 
-   To enter matrixes, you can use one of the following two
+   To enter matrices, you can use one of the following two
    syntaxes. You can either enter the matrix on one line,
    separating values by commas and rows by semicolons. Or you can
    enter each row on one line, separating values by commas. You
@@ -1938,7 +1937,7 @@ Entering Matrices
    Do not use both ';' and return at once on the same line though.
 
    You can also use the matrix expansion functionality to enter
-   matricies. For example you can do:
+   matrices. For example you can do:
 a = [ 1, 2, 3
       4, 5, 6
       7, 8, 9]
@@ -1951,8 +1950,8 @@ b = [ a,  10
  7,   8,  9, 10
  11, 11, 11, 12]
 
-   similiarly you can build matricies out of vectors and other
-   stuff like that.
+   similarly you can build matrices out of vectors and other stuff
+   like that.
 
    Another thing is that non-specified spots are initialized to 0,
    so
@@ -2137,7 +2136,7 @@ help FunctionName
 
 load "file.gel"
 
-          Load a file into the interpretor. The file will execute
+          Load a file into the interpreter. The file will execute
           as if it were typed onto the command line.
 
    cd
@@ -2852,7 +2851,7 @@ SurfacePlotVariableNames = ["x","y","z"]
           Tells genius which variable names are used as default
           names for surface plotting functions using SurfacePlot.
           Note that the z does not refer to the dependent
-          (vertical) axis, but to the indepent complex variable
+          (vertical) axis, but to the independent complex variable
           z=x+iy.
 
           Version 1.0.10 onwards.
@@ -3828,7 +3827,7 @@ MillerRabinTest (n,reps)
 MillerRabinTestSure (n)
 
           Use the Miller-Rabin primality test on n with enough
-          bases that assuming the Generalized Reimann Hypothesis
+          bases that assuming the Generalized Riemann Hypothesis
           the result is deterministic.
 
           See Wikipedia or Planetmath or Mathworld for more
@@ -3882,7 +3881,7 @@ PadicValuation (n,p)
 PowerMod (a,b,m)
 
           Compute a^b mod m. The b's power of a modulo m. It is
-          not neccessary to use this function as it is
+          not necessary to use this function as it is
           automatically used in modulo mode. Hence a^b mod m is
           just as fast.
 
@@ -4413,7 +4412,7 @@ AuxiliaryUnitMatrix (n)
           matrix of one zero eigenvalue.
 
           See Planetmath or Mathworld for more information on
-          Jordan Cannonical Form.
+          Jordan Canonical Form.
 
    BilinearForm
 
@@ -6599,7 +6598,7 @@ LinePlotDrawLine (v,...)
           window are from version 1.0.6 onwards.)
 
           The color should be either a string indicating the
-          common english word for the color that GTK will
+          common English word for the color that GTK will
           recognize such as "red", "blue", "yellow", etc...
           Alternatively the color can be specified in RGB format
           as "#rgb", "#rrggbb", or "#rrrrggggbbbb", where the r,
@@ -6648,7 +6647,7 @@ LinePlotDrawPoints (v,...)
           the thickness, the window as 4-vector, or the legend.
 
           The color should be either a string indicating the
-          common english word for the color that GTK will
+          common English word for the color that GTK will
           recognize such as "red", "blue", "yellow", etc...
           Alternatively the color can be specified in RGB format
           as "#rgb", "#rrggbb", or "#rrrrggggbbbb", where the r,
@@ -6744,10 +6743,24 @@ PlotCanvasFreeze ()
 PlotCanvasThaw ()
 
           Thaw the plot canvas frozen by PlotCanvasFreeze and
-          rewdraw the canvas immediately. The canvas is also
-          always thawed after end of execution of any program.
+          redraw the canvas immediately. The canvas is also always
+          thawed after end of execution of any program.
 
           Version 1.0.18 onwards.
+
+   PlotWindowPresent
+
+PlotWindowPresent ()
+
+          Show and raise the plot window, creating it if
+          necessary. Normally the window is created when one of
+          the plotting functions is called, but it is not always
+          raised if it happens to be below other windows. So this
+          function is good to call in scripts where the plot
+          window might have been created before, and by now hidden
+          behind the console or other windows.
+
+          Version 1.0.19 onwards.
 
    SlopefieldClearSolutions
 
@@ -6816,6 +6829,15 @@ genius> SurfacePlot(|sin|,-1,1,-1,1,0,1.5)
 genius> SurfacePlot(`(x,y)=x^2+y,-1,1,-1,1,-2,2)
 genius> SurfacePlot(`(z)=|z|^2,-1,1,-1,1,0,2)
 
+   LinePlotClear
+
+SurfacePlotClear ()
+
+          Show the surface plot window and clear out functions and
+          any other lines that were drawn.
+
+          Available in version 1.0.19 and onwards.
+
    SurfacePlotData
 
 SurfacePlotData (data)
@@ -6833,7 +6855,7 @@ SurfacePlotData (data,label,[x1,x2,y1,y2,z1,z2])
           Plot a surface from data. The data is an n by 3 matrix
           whose rows are the x, y and z coordinates. The data can
           also be simply a vector whose length is a multiple of 3
-          and so contains the tripples of x, y, z. The data should
+          and so contains the triples of x, y, z. The data should
           contain at least 3 points.
 
           Optionally we can give the label and also optionally the
@@ -6891,6 +6913,95 @@ genius> d:=null; for i=1 to 20 do for j=1 to 10 d@(i,j) = (0.1*i-1)^2-(0
 genius> SurfacePlotDataGrid(d,[-1,1,0,1],"half a saddle")
 
           Version 1.0.16 onwards.
+
+   SurfacePlotDrawLine
+
+SurfacePlotDrawLine (x1,y1,z1,x2,y2,z2,...)
+
+SurfacePlotDrawLine (v,...)
+
+          Draw a line from x1,y1,z1 to x2,y2,z2. x1,y1,z1,
+          x2,y2,z2 can be replaced by an n by 3 matrix for a
+          longer polyline.
+
+          Extra parameters can be added to specify line color,
+          thickness, arrows, the plotting window, or legend. You
+          can do this by adding an argument string "color",
+          "thickness", "window", or "legend", and after it specify
+          the color, the thickness, the window as 6-vector, or the
+          legend.
+
+          The color should be either a string indicating the
+          common English word for the color that GTK will
+          recognize such as "red", "blue", "yellow", etc...
+          Alternatively the color can be specified in RGB format
+          as "#rgb", "#rrggbb", or "#rrrrggggbbbb", where the r,
+          g, or b are hex digits of the red, green, and blue
+          components of the color. Finally, since version 1.0.18,
+          the color can also be specified as a real vector
+          specifying the red green and blue components where the
+          components are between 0 and 1, e.g. [1.0,0.5,0.1].
+
+          The window should be given as usual as
+          [x1,x2,y1,y2,z1,z2], or alternatively can be given as a
+          string "fit" in which case, the x range will be set
+          precisely and the y range will be set with five percent
+          borders around the line.
+
+          Finally, legend should be a string that can be used as
+          the legend in the graph. That is, if legends are being
+          printed.
+
+          Examples:
+
+genius> SurfacePlotDrawLine(0,0,0,1,1,1,"color","blue","thickness",3)
+genius> SurfacePlotDrawLine([0,0,0;1,-1,2;-1,-1,-3])
+
+          Available from version 1.0.19 onwards.
+
+   SurfacePlotDrawPoints
+
+SurfacePlotDrawPoints (x,y,z,...)
+
+SurfacePlotDrawPoints (v,...)
+
+          Draw a point at x,y,z. The input can be an n by 3 matrix
+          for n different points. This function has essentially
+          the same input as SurfacePlotDrawLine.
+
+          Extra parameters can be added to specify line color,
+          thickness, the plotting window, or legend. You can do
+          this by adding an argument string "color", "thickness",
+          "window", or "legend", and after it specify the color,
+          the thickness, the window as 6-vector, or the legend.
+
+          The color should be either a string indicating the
+          common English word for the color that GTK will
+          recognize such as "red", "blue", "yellow", etc...
+          Alternatively the color can be specified in RGB format
+          as "#rgb", "#rrggbb", or "#rrrrggggbbbb", where the r,
+          g, or b are hex digits of the red, green, and blue
+          components of the color. Finally the color can also be
+          specified as a real vector specifying the red green and
+          blue components where the components are between 0 and
+          1.
+
+          The window should be given as usual as
+          [x1,x2,y1,y2,z1,z2], or alternatively can be given as a
+          string "fit" in which case, the x range will be set
+          precisely and the y range will be set with five percent
+          borders around the line.
+
+          Finally, legend should be a string that can be used as
+          the legend in the graph. That is, if legends are being
+          printed.
+
+          Examples:
+
+genius> SurfacePlotDrawPoints(0,0,0,"color","blue","thickness",3)
+genius> SurfacePlotDrawPoints([0,0,0;1,-1,2;-1,-1,1])
+
+          Available from version 1.0.19 onwards.
 
    VectorfieldClearSolutions
 
@@ -7066,13 +7177,13 @@ Output
    Display 0.0 when floating point number is less than 10^-x
           (0=never chop)
           How to chop output. But only when other numbers nearby
-          are large. See the documentation of the paramter
+          are large. See the documentation of the parameter
           OutputChopExponent.
 
    Only chop numbers when another number is greater than 10^-x
-          When to chop output. This is set by the paramter
+          When to chop output. This is set by the parameter
           OutputChopWhenExponent. See the documentation of the
-          paramter OutputChopExponent.
+          parameter OutputChopExponent.
 
    Remember output settings across sessions
           Should the output settings in the Number/Expression
@@ -7203,7 +7314,8 @@ About Genius Mathematics Tool
    program.
 
    Jiří Lebl was during various parts of the development partially
-   supported for the work by NSF grant DMS 0900885, the University
-   of Illinois at Urbana-Champaign, the University of California
-   at San Diego, and the University of Wisconsin-Madison. The
-   software has been used for both teaching and research.
+   supported for the work by NSF grants DMS 0900885, DMS 1362337,
+   the University of Illinois at Urbana-Champaign, the University
+   of California at San Diego, the University of
+   Wisconsin-Madison, and Oklahoma State University. The software
+   has been used for both teaching and research.
