@@ -4,8 +4,8 @@ Changes to 1.0.19
   mathematical concept.  Generally taken from the classes I have been teaching.
   They are installed under prefix/share/genius/examples/ and are mostly using
   graphics so only work in the graphical GNOME/GTK version
-* New 3D graphing functions, SurfacePlotDrawLine, SurfacePlotDrawPoints,
-  SurfacePlotClear
+* New plotting functions: SurfacePlotDrawLine, SurfacePlotDrawPoints,
+  SurfacePlotClear, PlotWindowPresent
 * New rotation animation in the surface plot window
 * A few fixes
 
