@@ -1,3 +1,11 @@
+Fri Sep 05 21:20:02 2014  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/graphing.c: Add PlotWindowPresent
+
+	* examples/*.gel: use the PlotWindowPresent function
+
+	* help/C/genius.xml: document the function
+
 Fri Sep 05 20:46:23 2014  Jiri (George) Lebl <jirka@5z.com>
 
 	* src/gnome-genius.c, src/examples.[ch]: rename tutorials to examples
